	- added: -kog - a new generic oscillator
	- added: lots of new documentation - check the examples page,
		 user's guide and the ecasound faq 
	- added: better handling of output error conditions (out of
		 disk space, etc)
	- added: -eS - audio stamper
	- added: -ksv - control source that analyzes audio stamp
  		 volume statistics and creates control data from 
		 the results
	- removed: eiam-cmds; u, a, cstatus, l, fstatus, estatus
	- changed: -kf - 'mode' parameter added
	- changed: format of the file 'generic_oscillators'
	- changed: ECI - last_list_of_strings() to last_string_list()
	- changed: way gate operators functions; instead of muting 
		   the chain, they now truncate the passing buffers -
		   in future, amplify+controller (-ea + -k)
		   combinations can be used in the same manner as the
		   old gate operators
	- fixed: "-x -i file.ext" style cmd-line arg sequences weren't
		parsed correctly [jhall]
	- fixed: ECI - command_float_arg() was broken (all languages)
	- fixed: when exiting console-mode ecasound with "quit", 
	         ecasound object weren't properly destructed causing
		 all kinds of weird behavious (especially with wav-
		 files) - [smassy]
07122000 (v1.8.5d15)
	- added: tremolo effect (-eemt) [rcs]
	- added: -z:db; i/o double buffering layer is back! - 
		 after complete rewrite, db-mode now supports all
		 non-realtime audio objects, and works both for 
		 input and output
	- added: default-double-buffer-size added to ~/.ecasoundrc
	- added: double buffer size can be given as the 2nd 
		 argument of -z:db,dbsize
	- added: optional argument for -r:sched_priority; specify 
		 the static rt-priority; see ecasound(1)
	- added: default-schedpriority added to ~/.ecasoundrc
	- added: 32bit support for OSS/Linux
	- added: comments lines (#-prefixed lines) allowed when
		 loading chainsetups from file
	- added: ecatools - ecasignalview added to the package; 
		 see ecatools(1) man page for details