@@ -36,6 +36,7 @@ Last officially released version is -*> v1.8.2r14 <*-
 	- added: -ksv - control source that analyzes audio stamp
   		 volume statistics and creates control data from 
 		 the results
+	- added: -z:nodb - disable double-buffering
 	- removed: eiam-cmds; u, a, cstatus, l, fstatus, estatus
 	- changed: -kf - 'mode' parameter added
 	- changed: format of the file 'generic_oscillators'
